--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -153,6 +153,7 @@ BITCOIN_TESTS =\
   test/streams_tests.cpp \
   test/sv2_messages_tests.cpp \
   test/sv2_noise_tests.cpp \
+  test/sv2_transport_tests.cpp \
   test/sync_tests.cpp \
   test/system_tests.cpp \
   test/timeoffsets_tests.cpp \
@@ -386,11 +387,7 @@ test_fuzz_fuzz_SOURCES = \
  test/fuzz/spanparsing.cpp \
  test/fuzz/string.cpp \
  test/fuzz/strprintf.cpp \
-<<<<<<< HEAD
-=======
- test/fuzz/system.cpp \
  test/fuzz/sv2_messages.cpp \
->>>>>>> 864e9aff44 (Add sv2 messages)
  test/fuzz/sv2_noise.cpp \
  test/fuzz/system.cpp \
  test/fuzz/timeoffsets.cpp \
